<resources>
    <string name="app_name">Steeped</string>
    <string name="enter_time_text">Choose a Timer </string>
    <string name="timer">Time Remaining:</string>
    <string name="go_button">Go</string>
    <string name="time_short">Short (30 Seconds)</string>
    <string name="time_long">Short (2 Minutes)</string>
    <string name="action_settings">Settings</string>

    <string name="btn_white">White Tea</string>
    <string name="btn_yellow">Yellow Tea</string>
    <string name="btn_green">Green Tea</string>
    <string name="btn_oolong">Oolong Tea</string>
    <string name="btn_black">Black Tea</string>
    <string name="btn_herbal">Herbal Tea</string>

    <string name="btn_infusor">Infusor</string>
    <string name="btn_kettle">Kettle</string>
    <string name="btn_pot">Pot</string>

    <string name="tv_TeaType">Please Select Type of Tea</string>
    <string name="title_activity_brew_type">BrewType</string>
    <string name="title_activity_strength_desire">StrengthDesire</string>
    <string name="title_activity_tea_type">TeaType</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="tv_sd">Choose a desire strength</string>
    <string name="buttonsd_light">1</string>
    <string name="buttonsd_normal"></string>
    <string name="buttonsd_strong">3</string>

    <string name="textViewTime"></string>
    <string name="btnStop">Stop</string>
    <string name="btnStart">Start</string>

</resources>
