<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/timer" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/timer"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/enter_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/enter_time_text"
        android:textSize="40sp" />

    <Button
        android:id="@+id/go_button"
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_long_bttn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:enabled="true"
        android:text="@string/go_button" />

    <Button
        android:id="@+id/time_short_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_time_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/time_short" />

    <Button
        android:id="@+id/time_long_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_short_bttn"
        android:layout_centerHorizontal="true"
        android:text="@string/time_long" />

</RelativeLayout>
