<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/brewbackgroud"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_BrewType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Choose a brew type"
            android:textSize="30sp"
            android:theme="@style/AppTheme"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btn_infuser"
            android:layout_width="390dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"

            android:text="@string/btn_infusor"
        android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.92"
        style="@style/AppTheme"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_kettle"
        android:layout_width="390dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:text="@string/btn_kettle"
        android:layout_marginBottom="5dp"
        style="@style/AppTheme"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_pitcher"
        android:layout_width="390dp"
        android:layout_height="161dp"
        android:layout_gravity="center"

        android:text="@string/btn_pot"
        android:layout_weight="1.24"
        style="@style/AppTheme"
        android:textSize="20sp" />


    </LinearLayout>


</RelativeLayout>